2008-05-21  Michael Goffioul <michael.goffioul@gmail.com>

	* configure.in (SCRIPTS_EXE_SUFFIX): New substituted
	variable. Define to ".exe" for MSVC compilation.
	* octMakefile.in (SCRIPTS_EXE_SUFFIX): New variable.
	(DISTFILES): Add mkoctfile.cc.in, octave-config.cc.in and
	octave-bug.cc.in.
	(SHELL_SCRIPTS): Use SCRIPTS_EXE_SUFFIX.
	(mkoctfile.cc, mkoctfile$(EXEEXT)): New build rules.
	(octave-config.cc, octave-config$(EXEEXT)): Likewise.
	(octave-bug.cc, octave-bug$(EXEEXT)): Likewise.
	(install, install-strip, uninstall): Use SCRIPTS_EXE_SUFFIX.
	(maintainer-clean, distclean): Remove mkoctfile.[cc|o|exe],
	octave-config.[cc|o|exe] and octave-bug.[cc|o|exe].
	(clean): Remove mkoctfile$(EXEEXT), octave-config$(EXEEXT),
	octave-bug$(EXEEXT) and the corresponding object files.

2009-05-07  Rik <rdrider0-list@yahoo.com>

	* README.mirrors: Remove invalid mirror sites which no longer exist.

2009-05-07  John W. Eaton  <jwe@octave.org>

	* configure.in, mkoctfile.in, mkoctfile.cc.in, octave-bug.in,
	octave-bug.cc.in: Eliminate last remnants of f2c goop.

2009-05-07  Marco Atzeri  <marco_atzeri@yahoo.it>

	* configure.in, Makeconf.in: (SHLPRE): Rename from SHLLIBPRE.

2009-05-05  Jaroslav Hajek  <highegg@gmail.com>

	* configure.in: Include the whole 3.x g++ series as problematic.
	* Makefile: Don't mention that g++-3.x might work.

2009-05-04  John W. Eaton  <jwe@octave.org>

	* configure.in: Put -lftgl ahead of $FT2_LIBS, and $FT2_LIBS ahead
	of $OPENGL_LIBS.

2009-05-04  Peter O'Gorman  <pogma@thewrittenword.com>

	* aclocal.m4 (OCTAVE_HAVE_C99_VSNPRINTF): New macro.
	* configure.in: Use it.

	* configure.in (rs6000-ibm-aix* | powerpc-ibm-aix*): Set
	library_path_var to LIBPATH.
	(hppa*-hp-hpux*): Set library_path_var to SHLIB_PATH.
	(ia64*-hp-hpux*): New case for shared library variables.

	* configure.in: Provide decls for exp2, round, and tgamma if they
	are missing.

2009-04-11  David Bateman  <dbateman@free.fr>

	* NEWS: Add new graphics functions.
