@@ -1464,7 +1464,7 @@ case "$canonical_host_type" in
    LIBS="$LIBS -lwsock32"
   ;;
   *-*-msdosmsvc* | *-*-mingw*)
-  LIBS="$LIBS -lgdi32 -lws2_32 -lkernel32"
+  LIBS="$LIBS -lgdi32 -lws2_32 -luser32 -lkernel32"
   ;;
 esac
 
