@@ -1,5 +1,9 @@
 2008-05-21  Michael Goffioul <michael.goffioul@gmail.com>
 
+	* aclocal.m4 (AC_CHECK_QHULL_OK): Do not use -lm under
+	Windows systems.
+	* configure.in: Add -luser32 to LIBS under Windows.
+
 	* configure.in (SCRIPTS_EXE_SUFFIX): New substituted
 	variable. Define to ".exe" for MSVC compilation.
 	* octMakefile.in (SCRIPTS_EXE_SUFFIX): New variable.
